--- a/cert-prep.cabal
+++ b/cert-prep.cabal
@@ -15,6 +15,7 @@ build-type:         Simple
 library
     exposed-modules:
         MyLib
+        Types
     other-modules:
         Paths_cert_prep
     build-depends:
@@ -46,4 +47,22 @@ executable cert-prep
     default-extensions:
         OverloadedStrings
     ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
+    default-language: GHC2021
+
+test-suite spec
+    type: exitcode-stdio-1.0
+    main-is: Main.hs
+    other-modules:
+        Paths_cert_prep
+    hs-source-dirs:
+        test
+    default-extensions:
+        OverloadedStrings
+    build-depends:
+        aeson,
+        base <5,
+        cert-prep,
+        containers,
+        hspec,
+        text
     default-language: GHC2021
