--- a/cert-prep.cabal
+++ b/cert-prep.cabal
@@ -14,6 +14,8 @@ build-type:         Simple
 
 library
     exposed-modules:
+        Sampling
+        State
         Types
     other-modules:
         Paths_cert_prep
@@ -21,6 +23,8 @@ library
         aeson,
         base <5,
         containers,
+        microlens-th,
+        random,
         text
     hs-source-dirs:
         src
@@ -35,7 +39,6 @@ executable cert-prep
         TUI.Attributes
         TUI.Draw
         TUI.Event
-        TUI.State
         Paths_cert_prep
     build-depends:
         aeson,
@@ -46,7 +49,6 @@ executable cert-prep
         containers,
         microlens,
         microlens-mtl,
-        microlens-th,
         random,
         text,
         vty,
