--- a/cert-prep.cabal
+++ b/cert-prep.cabal
@@ -49,6 +49,7 @@ executable cert-prep
         containers,
         microlens,
         microlens-mtl,
+        optparse-applicative,
         random,
         text,
         vty,
@@ -62,18 +63,26 @@ executable cert-prep
 
 test-suite spec
     type: exitcode-stdio-1.0
-    main-is: Main.hs
+    main-is: Spec.hs
     other-modules:
+        Generators
+        SamplingSpec
+        TypesSpec
         Paths_cert_prep
     hs-source-dirs:
         test
     default-extensions:
         OverloadedStrings
+    ghc-options: -Wall
+    build-tool-depends:
+        hspec-discover:hspec-discover
     build-depends:
+        QuickCheck,
         aeson,
         base <5,
         cert-prep,
         containers,
         hspec,
+        random,
         text
     default-language: GHC2021
